# FS2012-CSP-Ex

./: .gitignore
Common/: 2  2DLattice.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  NDAlgorithm.hpp  NDIsing.hpp  NDIterate.hpp  NDLattice.hpp  NDLattice_mpi.hpp  NDLattice_v2.hpp  cmake_install.cmake  pyIsing.cpp  pyLattice.cpp  rand_test  random_msk.hpp  test_common.cpp  ¨
Ex1/: CMakeCache.txt  CMakeLists.txt  Ising.hpp  Makefile  cmake_install.cmake  dr.txt  ex01_ricoh.aux  ex01_ricoh.tex  ising  main.cpp  mr.txt  plot.py  run_experiments.sh
Ex1/bak/: l10.par  l15.par  l20.par  l25.par
Ex1/ex01_ricoh/src/Common/: NDAlgorithm.hpp  NDIterate.hpp  NDLattice.hpp
Ex1/ex01_ricoh/src/Ex1/: CMakeLists.txt  main.cpp  run_experiments.sh
Ex2/: CMakeLists.txt
Ex2/src/: CMakeLists.txt  ex2.cpp  ex2_new.cpp  plot.py
Ex7/src/: Algorithm.hpp  Lennard_Jones.hpp  Reader.hpp  idee.txt  md_particle.hpp  md_simulation.hpp  test.cpp
